unpackaged/main/default/objects/Reward_Calculation_Tier__mdt/Reward_Calculation_Tier__mdt.object-meta.xml
<CustomObject>
    <description>Stores the Tiers for the point range as per country</description>
    <label>Reward Calculation Tier</label>
    <pluralLabel>Reward Calculation Tiers</pluralLabel>
</CustomObject>