unpackaged/main/default/objects/Reward_Calculation_Tier__mdt/fields/Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit__c</fullName>
    <label>Lower Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>