unpackaged/main/default/objects/Reward_Calculation_Tier__mdt/fields/Upload_To_AdminNet__c.field-meta.xml
<CustomField>
    <fullName>Upload_To_AdminNet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload To AdminNet</label>
    <type>Checkbox</type>
</CustomField>