unpackaged/main/default/objects/Reward_Calculation_Tier__mdt/listViews/Reward_Tiers.listView-meta.xml
<ListView>
    <fullName>Reward_Tiers</fullName>
    <columns>Country__c</columns>
    <columns>Lower_Limit__c</columns>
    <columns>Upper_Limit__c</columns>
    <columns>Tier__c</columns>
    <columns>Upload_To_AdminNet__c</columns>
    <filterScope>Everything</filterScope>
    <label>Reward Tiers</label>
</ListView>